--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Health4All</title>
+    <!-- Inject API URL from environment variable -->
+    <script>
+      window.API_BASE_URL = "%VITE_API_URL%";
+      // Fallback to hard-coded URL if environment variable is not replaced
+      if (window.API_BASE_URL === "%VITE_API_URL%") {
+        window.API_BASE_URL = "https://health4all-backend.onrender.com";
+      }
+      console.log("API URL set to:", window.API_BASE_URL);
+    </script>
   </head>
   <body>
     <div id="root"></div>
