changed backend key

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
       window.API_BASE_URL = "%VITE_API_URL%";
       // Fallback to hard-coded URL if environment variable is not replaced
       if (window.API_BASE_URL === "%VITE_API_URL%") {
-        window.API_BASE_URL = "https://health4all-backend.onrender.com";
+        window.API_BASE_URL = "https://health4all-backend-13a9.onrender.com";
       }
       console.log("API URL set to:", window.API_BASE_URL);
     </script>
